dirty hack to fix the uneven spacing

--- a/src/skins/vector/css/molecules/EventTile.css
+++ b/src/skins/vector/css/molecules/EventTile.css
@@ -95,6 +95,7 @@ limitations under the License.
     position: relative;
     width: 90px;
     margin-right: 10px;
+    margin-top: -6px;
 }
 
 .mx_MessageTimestamp {
